--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/luxass/eslint-plugin-overdrive.git"
+    "url": "git+https://github.com/luxass/eslint-plugin-overdrive.git"
   },
   "keywords": [
     "eslint",
